@@ -33,8 +33,9 @@ import java.util.List;
  */
 public class KnowledgeRetrievalNodeData extends NodeData {
 
-	public static final List<Variable> DEFAULT_OUTPUT_SCHEMA = List
-		.of(new Variable("retrieved_documents", VariableType.ARRAY_OBJECT.value()));
+	public static Variable getDefaultOutputSchema() {
+		return new Variable("result", VariableType.ARRAY_OBJECT.value());
+	}
 
 	private String userPromptKey;
 
@@ -83,7 +84,7 @@ public class KnowledgeRetrievalNodeData extends NodeData {
 	private String inputField;
 
 	public KnowledgeRetrievalNodeData() {
-		super(Collections.emptyList(), DEFAULT_OUTPUT_SCHEMA);
+		super(Collections.emptyList(), List.of(getDefaultOutputSchema()));
 	}
 
 	public KnowledgeRetrievalNodeData(List<VariableSelector> inputs, List<Variable> outputs) {
